<resources>
    <string name="code_name">\'DD\'</string>
    <string name="version_name">0.92.30</string>
    <string name="app_name">Samourai</string>
    <string name="new_version_message">Welcome to Samourai Alpha 1 \'DD\'. We are building the most secure and private mobile wallet. In this version:\n\nUpdated algorithim allows you to define the amount of obfuscation per transaction basis\n\nUse ShapeShift to receive payment in 30+ altcoins and auto convert to bitcoin held in your wallet\n\nEnable VPN or Tor to relay all transactions through an anonymous IP address\n\nand much, much more...</string>
    <string name="alpha_create_wallet">Write these words down and keep them safe. Do not lose these words or forget your passphrase.</string>
    <string name="alpha_create_confirm_backup">I\'ve written down my words</string>
    <string name="creating_wallet">Creating wallet. Please wait...</string>
    <string name="restoring_wallet">Restoring wallet. Please wait...</string>
    <string name="syncing">Syncing with network. Please wait...</string>
    <string name="decrypting_bip38">Decrypting BIP38 password. Please wait...</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_send">Send</string>
    <string name="action_stealth_send">Stealth send</string>
    <string name="action_receive">Receive</string>
    <string name="action_tx">Transactions</string>
    <string name="action_settings">Settings</string>
    <string name="action_sweep">Sweep private key</string>
    <string name="action_bip47">Payment channels</string>
    <string name="action_unarchive">Activate all archived payment codes</string>
    <string name="action_sync_all">Sync all payment codes</string>
    <string name="hello_world">Hello world!</string>
    <string name="about_us">About Samourai Wallet</string>
    <string name="about_title">About us</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="options_cat_prefs">Units, Currency, Block explorer</string>
    <string name="options_cat_stealth">Stealth</string>
    <string name="options_cat_remote">Remote</string>
    <string name="options_cat_wallet">Wallet</string>
    <string name="options_cat_networking">Networking</string>
    <string name="options_cat_other">About</string>
    <string name="options_mnemonic">Show mnemonic</string>
    <string name="options_mnemonic2">Show mnemonic for this wallet.</string>
    <string name="options_hexseed">Show hex seed</string>
    <string name="options_hexseed2">Show hex seed for this wallet.</string>
    <string name="options_passphrase">Show BIP39 passphrase</string>
    <string name="options_passphrase2">Show BIP39 passphrase for this wallet.</string>
    <string name="options_xpub">Show XPUB</string>
    <string name="options_xpub2">Show extended public key for an account.</string>
    <string name="options_wipe">Secure erase wallet</string>
    <string name="options_wipe2">Securely erase this wallet from the device.</string>
    <string name="options_units">Units</string>
    <string name="options_units2">Bitcoin units to display (default BTC).</string>
    <string name="options_stealth_display">Stealth launcher</string>
    <string name="options_stealth_display2">Remove Samourai from the launcher and home screen. You must dial **YOUR_PIN_CODE# from the phone dialer to launch Samourai.</string>
    <string name="options_remote_commands">Enable remote commands</string>
    <string name="options_remote_commands2">Allow remote commands via SMS.</string>
    <string name="options_currency">Street price</string>
    <string name="options_currency2">Choose your exchange and local fiat currency.</string>
    <string name="options_exchange">Bitcoin exchange</string>
    <string name="options_exchange2">Bitcoin exchange for obtaining fiat price.</string>
    <string name="options_blockexplorer">Block explorer</string>
    <string name="options_blockexplorer2">The block explorer used to view transaction details.</string>
    <string name="options_sim_switch">SIM switch defense</string>
    <string name="options_sim_switch2">Send SMS to a trusted mobile number when the SIM card is changed.</string>
    <string name="options_use_telno">Use trusted mobile number for remote</string>
    <string name="options_use_telno2">Only allow remote commands sent from your trusted mobile phone number.</string>
    <string name="options_alert_telno">Trusted number</string>
    <string name="options_alert_telno2">A trusted mobile number that you can restrict remote access to (use int\'l format without spaces ex.: +447385555555).</string>
    <string name="options_hash">APK hash</string>
    <string name="options_hash2">Get SHA-256 hash of this installed APK file (can be copied to clipboard).</string>
    <string name="options_VPN">VPN</string>
    <string name="options_VPN2">Launch OpenVPN for Android.</string>
    <string name="options_Tor">Route via Tor?</string>
    <string name="options_Tor2">Launch Orbot (Tor).</string>
    <string name="options_export">Export wallet backup</string>
    <string name="options_export2">Export wallet and metadata.</string>
    <string name="options_change_pin">Change PIN</string>
    <string name="options_change_pin2">Define a new PIN.</string>
    <string name="options_remote_pin">Stealth launch and remote PIN</string>
    <string name="options_remote_pin2">Define alternative PIN for stealth launch and remote functions.</string>
    <string name="options_autosave_backup">Autosave backup to device storage</string>
    <string name="options_autosave_backup2">Periodically save passphrase encrypted backup to device storage.</string>
    <string name="options_version">Version</string>
    <string name="options_certif">Signing certificate</string>
    <string name="options_certif2">View certificate used to sign this app.</string>
    <string name="options_txs">Transactions</string>
    <string name="options_txs2">Transaction settings.</string>
    <string name="options_bip126">Spend using BIP126</string>
    <string name="options_bip126_2">Spends will use BIP126 for increased obfuscation.</string>
    <string name="options_utxo">Show unspent outputs</string>
    <string name="options_trusted_node">Trusted node</string>
    <string name="options_trusted_node2">Specify your own trusted node for broadcasting transactions.</string>
    <string name="options_use_trusted_node">Use trusted node</string>
    <string name="options_use_trusted_node2">Use trusted node for broadcasting transactions.</string>
    <string name="select_currency">Select currency</string>
    <string name="timeline_today">Today</string>
    <string name="timeline_yesterday">Yesterday</string>
    <string name="timeline_older">Older</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tx_receive">Received</string>
    <string name="tx_sent">Transaction sent</string>
    <string name="tx_failed">Error sending transaction</string>
    <string name="you_received">Received</string>
    <string name="you_sent">Sent</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="cannot_select_utxo">Cannot select unspent outputs</string>
    <string name="error_bip126_output">Error determining output address</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="send_payment_code">Send payment code</string>
    <string name="ask_you_sure_exit">Are you sure you want to exit Samourai?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="sim_warning">Your Samourai Wallet device now has a different SIM card corresponding to incoming number of this text message.</string>
    <string name="pin_5_8">Create a PIN code between 5 and 8 characters.</string>
    <string name="pin_5_8_confirm">Confirm PIN code</string>
    <string name="pin_error">Pin code error</string>
    <string name="no_internet">No Internet connectivity. Please try again.</string>
    <string name="bip38_pw">BIP38 password</string>
    <string name="bip38_pw_error">BIP38 password error</string>
    <string name="bip39_safe">Please create a passphrase and keep it secret. You will need this passphrase if you lose access to your wallet.</string>
    <string name="bip39_must">Your wallet must use a passphrase. Please try again.</string>
    <string name="please_select">Please select...</string>
    <string name="create_wallet">Create wallet</string>
    <string name="restore_wallet">Restore wallet</string>
    <string name="bip39_passphrase">BIP39 passphrase</string>
    <string name="mnemonic_hex">Mnemonic or hex seed</string>
    <string name="pin_enter">Enter PIN code</string>
    <string name="please_wait">Please wait...</string>
    <string name="random_key_error">Random key error</string>
    <string name="login_error">Login failed</string>
    <string name="wallet_created_ok">Wallet created OK.</string>
    <string name="wallet_created_ko">Error creating wallet.</string>
    <string name="wallet_restored_ok">Wallet restored OK.</string>
    <string name="wallet_restored_ko">Error restoring wallet.</string>
    <string name="sweep_address_for">Sweep address for</string>
    <string name="sweep_ok">Address swept OK</string>
    <string name="sweep_ko">Sweep address failed</string>
    <string name="address_used_previously">You have used this address before! Reusing addresses may result in a loss of privacy.</string>
    <string name="send_or_receive">Send or receive?</string>
    <string name="scan_or_manual">Scan QR code or enter manually?</string>
    <string name="scan">Scan</string>
    <string name="manual">Manual</string>
    <string name="amount_to_send">Amount to send</string>
    <string name="send_to">Send to (BTC address)</string>
    <string name="scan_error">Scan error</string>
    <string name="tx_ok">Transaction sent</string>
    <string name="tx_ko">Transaction failed</string>
    <string name="to">To</string>
    <string name="destination">Address or payment channel</string>
    <string name="insufficient_funds">Insufficient funds</string>
    <string name="invalid_tx_attempt">Invalid transaction attempt</string>
    <string name="tx_length_error">Samourai does not handle transactions over 100KB in size. Please try splitting your transaction.</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="receive_address_to_clipboard">Copy this receive address to the clipboard? If copied, it may be visible to other applications.</string>
    <string name="receive_address_to_share">Share this receive address? If shared, it may be read to other applications.</string>
    <string name="sure_to_erase">Are you sure you want to erase this wallet?</string>
    <string name="wallet_erased">Wallet erased from device.</string>
    <string name="next">Next</string>
    <string name="samourai_text">Samourai</string>
    <string name="import_wallet_seed">Import Wallet Seed</string>
    <string name="new_wallet">New Wallet</string>
    <string name="restore_backup">Restore Backup</string>
    <string name="create_new_wallet">Create New Wallet</string>
    <string name="seedwords_text">These 12 words are your wallet seed. They are used to restore your balance if you lose your divice. Do not lose this wallet seed! Write it down!</string>
    <string name="seedwords_buttons_text">Press and hold each button to reveal a single word. Write the words down in the order they are displayed</string>
</resources>