<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/samourai_icon"/>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_24sp"
        android:text="@string/samourai_text"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:gravity="center"/>

    <TextView
        android:layout_marginTop="50dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/new_wallet"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16sp"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@drawable/border_red"
        android:elevation="@dimen/start_z"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:columnCount="2">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/ic_backup_restore_grey"
            android:layout_marginEnd="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore_backup"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_size_12sp"
            android:textAlignment="center"
            android:gravity="start"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:src="@drawable/ic_import_grey"
            android:layout_marginEnd="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/import_wallet_seed"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_size_12sp"
            android:textAlignment="center"
            android:gravity="start"
            android:layout_weight="1"/>
    </GridLayout>



</LinearLayout>