<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_cancel"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_24sp"
            android:text="@string/create_new_wallet"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_weight="2"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seedwords_text"
        android:textSize="@dimen/text_size_20sp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"/>

    <TextView
        android:layout_marginTop="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seedwords_buttons_text"
        android:textSize="@dimen/text_size_12sp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"/>

    <HorizontalScrollView

        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="10dp">

        <!--<TextView-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:background="@color/red"-->
            <!--android:text="test"-->
            <!--android:textAlignment="center"-->
            <!--android:gravity="center"-->
            <!--android:paddingStart="10dp"-->
            <!--android:paddingEnd="10dp"-->
            <!--/>-->
        <LinearLayout
            android:id="@+id/mnemotic_list_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

        </LinearLayout>
    </HorizontalScrollView>


    <TextView
        android:layout_marginTop="50dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16sp"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@drawable/border_blue"
        android:elevation="@dimen/start_z"/>

</LinearLayout>